--- a/style.css
+++ b/style.css
@@ -252,6 +252,10 @@ body::-webkit-scrollbar-thumb {
     background: rgba(0, 0, 0, 0.8);
     width: 100vw;
     height: 100vh;
+    left: 0;
+    top: 70px;
+    right: 0;
+    bottom: 0;
     opacity: 0;
     pointer-events: none;
     transition: opacity .3s ease-in-out;
